add swagger doc comments
